--- a/fabric/almir_buildout.cfg.jinja2
+++ b/fabric/almir_buildout.cfg.jinja2
@@ -4,9 +4,9 @@ extends = buildout.d/production.cfg
 [almir]
 # define sql database connection as specified in
 # http://docs.sqlalchemy.org/en/latest/core/engines.html#database-urls
-#sqla_engine_url = sqlite:///%%(here)s/bacula.db
-sqla_engine_url = postgresql+pg8000://{{db.username}}:{{db.password}}@{{db.host}}/{{db.name}}
-#sqla_engine_url = mysql+mysqlconnector://bacula:<password>@hostname/<database>
+#sqla_engine_url = sqlite:///{{db.abs_path}}
+#sqla_engine_url = postgresql+pg8000://{{db.username}}:{{db.password}}@{{db.host}}/{{db.name}}
+#sqla_engine_url = mysql+mysqlconnector://{{db.username}}:{{db.password}}@{{db.host}}/{{db.name}}
 #sqla_engine_url = %(engine)s
 
 # your timezone from TZ* column in table https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
