--- a/almir/templates/job_list.jinja2
+++ b/almir/templates/job_list.jinja2
@@ -2,6 +2,9 @@
 
 {% block content %}
     <h1 class="view">Job <small>list</small></h1>
+    <input type="submit" value="enable" />
+    <input type="submit" value="disable" />
+
     {% if appstruct.state == 'scheduled' %}
         {{ macros.upcoming_jobs_table(request, objects) }}
     {% else %}
