--- a/almir/templates/storage_list.jinja2
+++ b/almir/templates/storage_list.jinja2
@@ -3,7 +3,7 @@
 {% block container %}
     <h1 class="view">Storage <small>list</small></h1>
     <h2>By name</h2>
-    <table class="table table-striped table-bordered datatables">
+    <table class="table table-bordered datatables">
         <thead>
             <tr>
                 <th>Name</th>
