again some initial works on web gui

--- a/almir/templates/macros.jinja2
+++ b/almir/templates/macros.jinja2
@@ -26,7 +26,6 @@
                 <th>Priority</th>
                 <th>Scheduled</th>
                 <th>Volume</th>
-		<th>Enabled</th>
 		<th>Select</th>
             </tr>
         </thead>
@@ -39,7 +38,6 @@
                     <td>{{ job.priority }}</td>
                     <td>{{ job.date }} {{ job.time }}</td>
                     <td>{{ job.volume }}</td>
-                    <td>{{ job.enabled }}</td>
 		    <td><input type="checkbox" /></td>
                 </tr>
             {% endfor %}
@@ -47,6 +45,29 @@
     </table>
 
 {%- endmacro %}
+
+
+{% macro disabled_jobs_table(request, jobs) -%}
+    <table class="table table-bordered datatables">
+        <thead>
+            <tr>
+                <th>Name</th>
+		<th>Select</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for job in jobs %}
+                <tr>
+                    <td>{{ job.name }}</td>
+		    <td><input type="checkbox" /></td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+{%- endmacro %}
+
+
 
 {% macro jobs_table(request, jobs) -%}
     <table class="table table-bordered datatables">
